--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.2",
     "@emotion/styled": "^11.11.0",
+    "@types/lodash.debounce": "^4.0.9",
     "autoprefixer": "^10.4.16",
     "axios": "^1.5.1",
     "framer-motion": "^10.16.16",
     "lodash.debounce": "^4.0.8",
+    "primereact": "^10.2.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-data-table-component": "^7.5.4",
+    "react-dom": "^18.2.0",
+    "styled-components": "^5.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
