--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/styled": "^11.11.0",
     "@types/lodash.debounce": "^4.0.9",
+    "abort-controller": "^3.0.0",
     "autoprefixer": "^10.4.16",
     "axios": "^1.5.1",
     "framer-motion": "^10.16.16",
     "lodash.debounce": "^4.0.8",
     "primereact": "^10.2.1",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-data-table-component": "^7.5.4",
     "react-dom": "^18.2.0",
     "styled-components": "^5.0.0"
