--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.2",
     "@emotion/styled": "^11.11.0",
+    "@formkit/drag-and-drop": "^0.1.4",
     "@types/lodash.debounce": "^4.0.9",
+    "@types/sortablejs": "^1.15.8",
     "abort-controller": "^3.0.0",
     "autoprefixer": "^10.4.16",
     "axios": "^1.5.1",
@@ -25,6 +27,10 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-data-table-component": "^7.5.4",
     "react-dom": "^18.2.0",
+    "react-gesture-responder": "^2.1.0",
+    "react-grid-dnd": "^2.1.2",
+    "react-sortablejs": "^6.1.4",
+    "sortablejs": "^1.15.2",
     "styled-components": "^5.0.0"
   },
   "devDependencies": {
