--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^18.2.0",
     "react-gesture-responder": "^2.1.0",
     "react-grid-dnd": "^2.1.2",
+    "react-router-dom": "^6.27.0",
     "react-sortablejs": "^6.1.4",
     "sortablejs": "^1.15.2",
     "styled-components": "^5.0.0"
